<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkOctal"
        android:layout_width="75dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="51dp"
        android:onClick="checkSelecy"
        android:text="@string/radio_octal"
        app:layout_constraintEnd_toStartOf="@+id/cajaResultadoOctal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBinario" />

    <CheckBox
        android:id="@+id/checkHexa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:onClick="checkSelecy"
        android:text="@string/radioHexa"
        app:layout_constraintEnd_toStartOf="@+id/cajaResultadoHexa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkOctal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioDecimal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:onClick="onClick"
            android:text="@string/radio_decimal" />

        <RadioButton
            android:id="@+id/radioBinario"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/readio_binario" />

        <RadioButton
            android:id="@+id/radioOctal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/radio_octal" />

        <RadioButton
            android:id="@+id/radioHexa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/radioHexa" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="48dp"
        android:text="@string/lbl_num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBinario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="53dp"
        android:checked="false"
        android:onClick="checkSelecy"
        android:text="@string/readio_binario"
        app:layout_constraintEnd_toStartOf="@+id/cajaResultadoBinario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajaNumeroIngresado" />

    <EditText
        android:id="@+id/cajaNumeroIngresado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/cajaResultadoBinario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/checkBinario"
        app:layout_constraintTop_toBottomOf="@+id/cajaNumeroIngresado" />

    <EditText
        android:id="@+id/cajaResultadoOctal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/checkOctal"
        app:layout_constraintTop_toBottomOf="@+id/cajaResultadoBinario" />

    <EditText
        android:id="@+id/cajaResultadoHexa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/checkHexa"
        app:layout_constraintTop_toBottomOf="@+id/cajaResultadoOctal" />

    <Button
        android:id="@+id/btn_limpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="12dp"
        android:onClick="onClick"
        android:text="@string/btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajaResultadoHexa" />

</androidx.constraintlayout.widget.ConstraintLayout>